--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
     - name: Run Playwright tests
-      run: dotenvx run -- npx playwright test demos/mfa/login-mfa.spec.ts
+      run: npx dotenvx run -- npx playwright test demos/mfa/login-mfa.spec.ts
       env: 
         DOTENV_PRIVATE_KEY_CI: ${{ secrets.DOTENV_PRIVATE_KEY_CI }}
     - uses: actions/upload-artifact@v4
